// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EvoconBooleanChip > renders correctly 1`] = `
<span>
  <selection-input-stub
    autowidth="true"
    checkbox="false"
    coloractiveprepend="false"
    disabled="false"
    disabledvalues=""
    emittoggleall="false"
    emptyequalsallselected="false"
    error="false"
    filled="true"
    groupidkey="id"
    groups=""
    groupsorderby="name"
    hiddenitemscount="0"
    hidesearch="false"
    hint=""
    iconkey="icon"
    inverted="false"
    isgroupedselect="false"
    issingleselect="true"
    itemflag=""
    itemgroupidkey="groupId"
    items="[object Object],[object Object]"
    itemsecondarytext=""
    itemtertiarytext=""
    itemtext="name"
    itemvalue="value"
    loading="false"
    menuinputtype="primary"
    modelvalue="true"
    numericorderby="false"
    placeholder=""
    prependtext=""
    removenonexistentselections="false"
    required="true"
    showemptyarrayasallselected="false"
    someselected="false"
    totalcount="0"
    usechips="true"
  />
</span>
`;

exports[`EvoconBooleanChip > renders correctly with modelValue false 1`] = `
<span>
  <selection-input-stub
    autowidth="true"
    checkbox="false"
    coloractiveprepend="false"
    disabled="false"
    disabledvalues=""
    emittoggleall="false"
    emptyequalsallselected="false"
    error="false"
    filled="true"
    groupidkey="id"
    groups=""
    groupsorderby="name"
    hiddenitemscount="0"
    hidesearch="false"
    hint=""
    iconkey="icon"
    inverted="false"
    isgroupedselect="false"
    issingleselect="true"
    itemflag=""
    itemgroupidkey="groupId"
    items="[object Object],[object Object]"
    itemsecondarytext=""
    itemtertiarytext=""
    itemtext="name"
    itemvalue="value"
    loading="false"
    menuinputtype="secondary"
    modelvalue="false"
    numericorderby="false"
    placeholder=""
    prependtext=""
    removenonexistentselections="false"
    required="true"
    showemptyarrayasallselected="false"
    someselected="false"
    totalcount="0"
    usechips="true"
  />
</span>
`;
